--- a/templates/layout.html.hbs
+++ b/templates/layout.html.hbs
@@ -7,7 +7,7 @@
 </head>
   <body lang="{{lang}}">
     <div class="card">
-      <h1><a class="brand" href="/">keys.lotta.gay</a></h1>
+      <h1><a class="rainbow-text" href="/">keys.lotta.gay</a></h1>
       {{> @partial-block }}
       <div class="spacer"></div>
     </div>
